# rust-lib-template

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cargo-generate.toml  cliff.toml  hook-post.rhai  hook-pre.rhai
.github/: dependabot.yml
.github/workflows/: release.yml  template-build.yml
_github/: settings.yml
_github/workflows/: rust.yml
doc/: CHANGELOG.md  CONTRIBUTING.md
doc/book/: book.toml
doc/book/src/: LICENSE.md  README.md
src/: error.rs  lib.rs  or_any.rs
template/: Cargo.toml  LICENSE-MIT  README.md  cargo-generate.toml  cliff-in.toml  hook-post.rhai  hook-pre.rhai  rust-pre-commit-hook
template/doc/book/: book.toml
template/doc/book/src/: README.md  SUMMARY.md
template/src/: another.rs  lib.rs
template/tests/: test_another.rs  test_lib.rs
tests/: test_me.rs
