[package]
name = "{{ crate_name }}"
version = "{{ package_version }}"
authors = ["{{ authors }}>"]
description = """{{ package_description }}"""
documentation = "https://docs.rs/{{ crate_name }}/"
repository = "{{ gh-repo-url }}.git"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2021"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[features]
cli = ["dep:structopt", "dep:tracing", "dep:tracing_subscriber"]

[dependencies]
structopt = { version = "0.3.26", optional = true }
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }

[[bin]]
name = "main"
src = "src/bin/main.rs"
required-features = ["cli"]

[dev-dependencies]
pretty_assertions = "1.4.1"
